2022-04-03 Jan Kotanski <jankotan@gmail.com>
	* change default by replacing --pid-with-filename by --pid-without-filename
	* tagged as v3.17.0

2022-03-16 Jan Kotanski <jankotan@gmail.com>
	* add np.bool_ to json numpyEncoder
	* tagged as v3.16.2

2022-03-15 Jan Kotanski <jankotan@gmail.com>
	* fix nxsfileinfo metadata for datasource without name
	* fix typos in nxsfileinfo metadata
	* tagged as v3.16.1

2022-03-15 Jan Kotanski <jankotan@gmail.com>
	* add --entry-names  option for nxsfileinfo
	* change -e to -t option for nxsfileinfo
	* tagged as v3.16.0

2022-03-09 Jan Kotanski <jankotan@gmail.com>
	* set endTime, description, startTime from nexus file
	* add --pid-with-uuid option for nxsfileinfo
	* add --pid-with-filename option for nxsfileinfo
	* add --beamtimeid option for nxsfileinfo
	* add Metadata.metadata()
	* tagged as v3.15.0

2022-03-01 Jan Kotanski <jankotan@gmail.com>
	* fix auto complition for options of nxsfileinfo metadata
	* tagged as v3.14.1

2022-02-28 Jan Kotanski <jankotan@gmail.com>
	* add --beamtime-meta option for nxsfileinfo metadata
	* add --scientific-meta option for nxsfileinfo metadata
	* add --pid option for nxsfileinfo metadata
	* add --output option for nxsfileinfo metadata
	* replace --scientific by reverse of --raw-metadata for nxsfileinfo metadata
	* tagged as v3.14.0

2022-02-25 Jan Kotanski <jankotan@gmail.com>
	* fix nxsfileinfo metadata crash with h5py
	* tagged as v3.13.1

2022-02-25 Jan Kotanski <jankotan@gmail.com>
	* print all attributes by nxsfileinfo metadata as default
	* add --hidden-attributes option for nxsfileinfo metadata
	* fixes for nxsfileinfo metadata subcommand
	* tagged as v3.13.0

2022-02-16 Jan Kotanski <jankotan@gmail.com>
	* add nxsfileinfo metadata subcommand
	* tagged as v3.12.0

2021-12-20 Jan Kotanski <jankotan@gmail.com>
	* remove delay time from lambda template components
	* tagged as v3.11.0

2021-09-21 Jan Kotanski <jankotan@gmail.com>
	* fix for nxscreate compare when sardana name defined